fix: remove white screen flash when loading page on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
   --bg: hsl(207, 26%, 17%)
 }
 
-html, body {
+html, body, #root {
   background-color: var(--bg);
 }
 
